<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:orientation="horizontal"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/green_news_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:background="@drawable/green_news"
            android:contentDescription="@string/green_news"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="2dp"
        android:layout_weight="1"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            android:id="@+id/title"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/author"
            style="@style/AuthorStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/author" />

        <TextView
            android:id="@+id/category"
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="category" />

        <TextView
            android:id="@+id/pub_date"
            style="@style/DateStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/pub_date" />

    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/right_arrow"
        android:src="@drawable/ic_chevron_right" />

</LinearLayout>